Crash when using F2 to rename in the 3D viewport #119778

Closed
opened 2024-03-22 11:27:48 +01:00 by Christoph Lendenfeld · 2 comments

System Information
Operating system: Linux Mint
Graphics card: RTX 3070

Blender Version
Broken: 4.2 (fresh build)
Worked: 4.1

Caused by aa03646a74

Short description of error
Blender crashes when trying to rename an object using F2.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

  • Open Blender
  • Make sure the default cube is selected
  • Press F2
  • Blender crashes
**System Information** Operating system: Linux Mint Graphics card: RTX 3070 **Blender Version** Broken: 4.2 (fresh build) Worked: 4.1 Caused by aa03646a74 **Short description of error** Blender crashes when trying to rename an object using F2. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). * Open Blender * Make sure the default cube is selected * Press F2 * Blender crashes
Christoph Lendenfeld added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-22 11:27:49 +01:00
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-03-22 12:07:24 +01:00
Member

Caused by aa03646a74

1  UI_popup_dummy_panel_set                  interface_region_popup.cc   597  0x221d6d9 
2  ui_paneltype_draw_impl                    interface_layout.cc         6150 0x21fead4 
3  UI_paneltype_draw                         interface_layout.cc         6202 0x21fed33 
4  UI_popover_panel_invoke                   interface_region_popover.cc 320  0x221b4bb 
5  wm_call_panel_exec                        wm_operators.cc             2161 0x14fca68 
6  wm_operator_invoke                        wm_event_system.cc          1556 0x14ca1f6 
7  wm_handler_operator_call                  wm_event_system.cc          2577 0x14cc85c 
8  wm_handlers_do_keymap_with_keymap_handler wm_event_system.cc          2970 0x14cde38 
9  wm_handlers_do_intern                     wm_event_system.cc          3300 0x14cfb72 
10 wm_handlers_do                            wm_event_system.cc          3439 0x14d037f 
11 wm_event_do_handlers                      wm_event_system.cc          4150 0x14d298e 
12 WM_main                                   wm.cc                       635  0x14bee14 
13 main                                      creator.cc                  590  0x711da9  

CC @guishe
CC @JacquesLucke

Caused by aa03646a740729a9e3aa2ba3ae22b47c8298f44a ``` 1 UI_popup_dummy_panel_set interface_region_popup.cc 597 0x221d6d9 2 ui_paneltype_draw_impl interface_layout.cc 6150 0x21fead4 3 UI_paneltype_draw interface_layout.cc 6202 0x21fed33 4 UI_popover_panel_invoke interface_region_popover.cc 320 0x221b4bb 5 wm_call_panel_exec wm_operators.cc 2161 0x14fca68 6 wm_operator_invoke wm_event_system.cc 1556 0x14ca1f6 7 wm_handler_operator_call wm_event_system.cc 2577 0x14cc85c 8 wm_handlers_do_keymap_with_keymap_handler wm_event_system.cc 2970 0x14cde38 9 wm_handlers_do_intern wm_event_system.cc 3300 0x14cfb72 10 wm_handlers_do wm_event_system.cc 3439 0x14d037f 11 wm_event_do_handlers wm_event_system.cc 4150 0x14d298e 12 WM_main wm.cc 635 0x14bee14 13 main creator.cc 590 0x711da9 ``` CC @guishe CC @JacquesLucke
Philipp Oeser added
Module
User Interface
Priority
High
and removed
Priority
Normal
labels 2024-03-22 12:27:16 +01:00
Philipp Oeser added this to the 4.2 LTS milestone 2024-03-22 12:27:20 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-03-22 14:49:50 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-22 17:09:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119778
No description provided.